2009-01-15  Aaron Boodman  <aa@chromium.org>

Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=15279
        Right clicking over text (or multiple spaces) auto selects the word
        (or multiple spaces) under it, which is not a desirable effect for some
        platforms.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::sendContextMenuEvent):
        Don't select words on right-click on Chromium.

Canonical link: https://commits.webkit.org/32133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39936 268f45cc-cd09-0410-ab3c-d52691b4dbfc